# kursovaya_rabota_2

./: .flake8  .gitignore  README.md  pyproject.toml
data/: aeroplanes.json
src/: aeroplane.py  api.py  api_base.py  file_base.py  json_saver.py  main.py  utils.py
tests/: test_aeroplane.py  test_api.py  test_extra.py  test_extra_coverage.py  test_json_saver.py  test_main.py  test_utils.py
