[project]
name = "kursovaya-project2"
version = "0.1.0"
description = ""
authors = [
    {name = "Ivan",email = "ivan@example.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
flake8 = "^7.3.0"
mypy = "^2.0.0"
isort = "^8.0.1"
types-requests = "^2.33.0.20260508"

